--- a/config.yaml
+++ b/config.yaml
@@ -3,8 +3,8 @@
 cluster_name: "Remindle-K8S"
 kubeconfig_path: "/cluster/kubeconfig"
 k3s_version: v1.22.3+k3s1
-public_ssh_key_path: "~/.ssh/id_rsa.pub"
-private_ssh_key_path: "~/.ssh/id_rsa"
+public_ssh_key_path: "~/.ssh/id_ed25519.pub"
+private_ssh_key_path: "~/.ssh/id_ed25519"
 ssh_allowed_networks:
   - 0.0.0.0/0
 verify_host_key: false
