--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 ---
 #hetzner_token: ""
 cluster_name: "remindle-k8s"
-kubeconfig_path: "/cluster/kubeconfig"
+kubeconfig_path: "/cluster/.kubeconfig"
 k3s_version: v1.22.3+k3s1
 public_ssh_key_path: "~/.ssh/id_ed25519.pub"
 private_ssh_key_path: "~/.ssh/id_ed25519"
